@@ -14,12 +14,12 @@
 
 using jsoncons::basic_json;
 using std::string;
+typedef jsoncons::basic_json<char, boost::fast_pool_allocator<void>> myjson;
 
 BOOST_AUTO_TEST_CASE(test_allocator)
 {
 	// Works but leaves memory leaks
-    /*
-	typedef basic_json<char, boost::pool_allocator<void>> myjson;
+    
     myjson o;
 
     o.set("field1",10.0);
@@ -29,8 +29,7 @@ BOOST_AUTO_TEST_CASE(test_allocator)
 	string s = o["field3"].as<string>();
 
     std::cout << o << std::endl;
-	*/
-
+	
     //boost::singleton_pool<boost::pool_allocator_tag, sizeof(myjson::string_wrapper)>::release_memory();
 }
 
